fixing some issues on mobile

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -3,7 +3,8 @@
 	border-radius: 0
 	min-height: 65px
 	background: $theme
-	+shadow
+	width: 100%
+	// +shadow
 	.cta
 		background: $brand
 		color: #fff
@@ -20,6 +21,7 @@
 		border: 1px solid $brand
 		color: $brand
 		&:hover
+			background: #fff
 			border: 1px solid $brand-light
 			@include transition
 			@include shadow
