--- a/_sass/_posts.sass
+++ b/_sass/_posts.sass
@@ -12,8 +12,8 @@
 	li
 		display: inline
 
-.content-container
-	padding: 10px 10px 30px 0
+// .content-container
+// 	padding: 10px 5px 30px 5px
 
 .readlink>a
 	background: $brand
