--- a/_sass/_socials.sass
+++ b/_sass/_socials.sass
@@ -12,7 +12,7 @@
 			display: inline-block
 	svg
 		fill: $brand
-		@include size(3rem)
+		@include size(4rem)
 		border-radius: 50%
 		@include transition
 		&:hover
@@ -62,15 +62,12 @@
 	.about
 		.socials
 			margin-bottom: 9rem
+			svg
+				@include size(1.8rem)
 	.footer-socials
 		.socials
 			svg
 				@include size(1.8rem)
-
-@media (max-width: 1540px)
-	.socials
-		svg
-			@include size(2.8rem)
 
 @media (max-width: 990px)
 	.socials
@@ -81,11 +78,11 @@
 @media (max-width: 1450px)
 	.socials
 		svg
-			@include size(2.6rem)
+			@include size(3rem)
 @media (max-width: 1200px)
 	.socials
 		svg
-			@include size(2.8rem)
+			@include size(4rem)
 
 	.footer-socials
 		.socials
